--- a/Andre/index.html
+++ b/Andre/index.html
@@ -2,10 +2,16 @@
 <html>
 	<head>
 		<title>André Wlodkovski</title>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
-<body>
-	
-	
-</body>
+	<body>
+		<input class="entrada" id="nome" type="text" placeholder="Nome"><br>
+		<input class="entrada" id="sobrenome" type="text" placeholder="Sobrenome"><br>
+		<input class="entrada" id="email" type="text" placeholder="E-mail"><br>
+		<input class="entrada" id="matricula" type="text" placeholder="Matrícula"><br>
+		<input class="entrada" id="usuario" type="text" placeholder="Usuário"><br>
+		<input class="entrada" id="senha" type="text" placeholder="Senha"><br>
+		<button id="entrar" type="button">Entrar</button>
+	</body>
 </html>
